# poeleveling

./: .gitignore  package-lock.json  package.json
.claude/: settings.local.json
common/icons/: create-icon.mjs
overlay/: electron.vite.config.ts  package.json  tsconfig.node.json  tsconfig.web.json
overlay-tauri/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
overlay-tauri/scripts/: package.mjs
overlay-tauri/src/: api.ts  main.tsx
overlay-tauri/src-tauri/: Cargo.toml  tauri.conf.json
overlay-tauri/src-tauri/.cargo/: config.toml
overlay-tauri/src-tauri/capabilities/: default.json
overlay-tauri/src-tauri/src/: commands.rs  main.rs  store.rs
overlay/src/main/: index.ts  log-watcher.ts
overlay/src/preload/: index.ts
overlay/src/renderer/: App.tsx  AppProvider.tsx  data.ts  env.d.ts  index.html  main.tsx  overlay.css  pob.ts  remote-data.ts  state.ts
overlay/src/renderer/api/: electron.ts  index.ts
overlay/src/renderer/components/: GemLinksPanel.tsx  GemPanel.tsx  OverlayHeader.tsx  SettingsPanel.tsx  StepDisplay.tsx  TreePanel.tsx
overlay/src/renderer/tree/: delta.ts  loader.ts  svg.ts  url-tree.ts
overlay/src/shared/: types.ts
