[package]
name = "overlay-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
# Tauri core framework
tauri = { version = "2", features = [] }
# Plugin for opening URLs in the system browser
tauri-plugin-opener = "2"
# JSON serialization/deserialization for settings
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
# Smaller binary size for release builds
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
